--- a/Inventory_System/mainForm.resx
+++ b/Inventory_System/mainForm.resx
@@ -103,19 +103,99 @@
         6yVbz6mzdQeuExEREfEnIPIJMcoj1d+235UAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnProduct.ImageHover" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAjVJREFUaEPt
-        WcsuQ1EU3QaC8Av8AjFAglKvhrnfQCQeX2HuF3yJAZ9ABCMGpNpKDFpr36zbnBxbe2+1PcpZyRrYj7X3
-        cg69LomIGFC8iRTKIsv8cjBREdkAa+Q6w4MFXZwGGmQVp7PGdFi8i0xVRbax0G5KLLjJdBO6sC7umGhp
-        BvEtV1Nn1EQmme4uMOwQ/OBCKV8wcI4lCbBIEXHLREo1U2R5AmjMI/7q1emsA5Z0BxDUa1LngJSWiVXE
-        W5lIqWZW2ZZAtRD3zdRR153r2BAZguC1N+AZnGZJApqoODXtWEHPCtsTIDYDqrZbd607sKRzQKjkCR8x
-        1YQuhHgeEynVTIEyTSB+7NWVmOoMxmk8IjbKdIInkQksc44f0ItOqL3QHKdcAp2hs5y5Vz86FQzaccQa
-        GLrHVM+BefvubOyyzVQ+8DSuHLEHxEaY7jl4Kg/O/Eum8gGPFUuOiHKfqb4BMw/cHbDTIlPZgaYzV+Q3
-        UHfietkRjfSQ/TJSBvU3jT7xZqHef+2xtEz2y8gxWzMDPaeeRkt2ZASNuYaAXz7x2wE9J55GO56wNTvw
-        4aeP6JbYd0yulvZlIWpzXy3t43rZwWGmYChGI5ZYSEYjllhIRiOWWEhGI5ZYSEYjllhIRiOWWEhGI5ZY
-        SEYjllhI/m8j+EN/2RILSeyU/01jQ2QMzfe+WEDe6ftgrpcPNZEFCNx6gn0nrtSN/9+x3MB3YbgqMgtB
-        6yVbz6mzdQeuExEREfEnIPIJMcoj1d+235UAAAAASUVORK5CYII=
+        AAABAAIAEBAAAAEAIABoBAAAJgAAACAgAAABACAAqBAAAI4EAAAoAAAAEAAAACAAAAABACAAAAAAADAE
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAF4FkZ5eBZL+XgWS/14Fkv9eBZL/XgWS/14F
+        kv9eBZL/XgWS/14Fkv9eBZL+XwWRnAAAAAAAAAAAAAAAAAAAAABeBZL9XgWSjV0Gk1VdBpNVXQaTVV0G
+        k1VdBZOOXgWS/14Fkv9dBZOOXgWSjV4FkvwAAAAAAAAAAAAAAAAAAAAAXgWS/10Gk1VVAI4JXQSTQl0E
+        k0JgAJ8IXQaTVV4Fkv9eBZL/XQaTVV0Gk1VeBZL/AAAAAAAAAAAAAAAAAAAAAF4Fkv9dBpNVXAaTUF4F
+        kv9eBZL/XAaTUF0Gk1VeBZL/XgWS/10Gk1VdBpNVXgWS/wAAAAAAAAAAAAAAAAAAAABeBZL/XQaTVVwG
+        k1BeBZL/XgWS/1wGk1BcBpNQXgWS/14Fkv9cBpNQXQaTVV4Fkv8AAAAAAAAAAAAAAAAAAAAAXgWS/10G
+        k1VVAI4JXweTTl8Hk05gAJ8IVQCOCV8Hk05fB5NOYACfCF0Gk1VeBZL/AAAAAAAAAAAAAAAAXgmRHl4F
+        kv9eBpOCXgSSRF4EkkReBJJEXgSSRF4EkkReBJJEXgSSRF4EkkReBpOCXgWS/2EJlR0AAAAAAAAAAF4F
+        kaVeBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZGlAAAAAAAA
+        AABeBZFtXgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWSbAAA
+        AAAAAAAAYACfCF4FktdeBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS120A
+        kgcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAYAiPIF8Fk6dfBZKqXwWSql8FkqpfBZKqXwWSql8FkqpfBZKqXwWSql8F
+        k6dgCI8gAAAAAAAAAAAAAAAAAAAAAFoIlB9fBJKyXgWSu14FkrteBZK7XgWSu14FkrteBZK7XgWSu14F
+        krtfBJKyXgmRHgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP//AAD//wAAwAMAAM8DAADfmwAA2ZsAANmbAADf+wAAz/MAAIAB
+        AADAAwAAwAMAAP//AADgBwAA4AcAAP//AAAoAAAAIAAAAEAAAAABACAAAAAAAIAQAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXQCXFl4F
+        kqleBZL2XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14F
+        kv9eBZL/XgWS/14Fkv9eBZL/XgWS9V4FkqhhAJIVAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABdBJGsXgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14F
+        kv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/18FkqoAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAF4FkvNeBZL/XwWS6F4FkrteBZK7XgWSu14FkrteBZK7XgWSu14FkrteBZK7XgWSu14F
+        krtfBJLoXgWS/14Fkv9eBZL/XgWS/18EkuheBZK7XgWSu18FkuheBZL/XgWS8gAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAXgWS/14Fkv9fBZKqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAF8FkqpeBZL/XgWS/14Fkv9eBZL/XwWSqgAAAAAAAAAAXwWSql4Fkv9eBZL/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABeBZL/XgWS/18FkqoAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAXwWSql4Fkv9eBZL/XgWS/14Fkv9fBZKqAAAAAAAAAABfBZKqXgWS/14F
+        kv8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAF4Fkv9eBZL/XwWSqgAAAAAAAAAAXweSI14F
+        k6BfBZKqXwWSql4Fk6BiCI8iAAAAAAAAAABfBZKqXgWS/14Fkv9eBZL/XgWS/18FkqoAAAAAAAAAAF8F
+        kqpeBZL/XgWS/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXgWS/14Fkv9fBZKqAAAAAAAA
+        AABeBZKdXgWS/14Fkv9eBZL/XgWS/18FkZwAAAAAAAAAAF8FkqpeBZL/XgWS/14Fkv9eBZL/XwWSqgAA
+        AAAAAAAAXwWSql4Fkv9eBZL/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABeBZL/XgWS/18F
+        kqoAAAAAAAAAAF8FkqpeBZL/XgWS/14Fkv9eBZL/XwWSqgAAAAAAAAAAXwWSql4Fkv9eBZL/XgWS/14F
+        kv9fBZKqAAAAAAAAAABfBZKqXgWS/14Fkv8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAF4F
+        kv9eBZL/XwWSqgAAAAAAAAAAXwWSql4Fkv9eBZL/XgWS/14Fkv9fBZKqAAAAAAAAAABfBZKqXgWS/14F
+        kv9eBZL/XgWS/18FkqoAAAAAAAAAAF8FkqpeBZL/XgWS/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAXgWS/14Fkv9fBZKqAAAAAAAAAABeBZKdXgWS/14Fkv9eBZL/XgWS/18FkZwAAAAAAAAAAF4F
+        kp1eBZL/XgWS/14Fkv9eBZL/XwWRnAAAAAAAAAAAXwWSql4Fkv9eBZL/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABeBZL/XgWS/18FkqoAAAAAAAAAAF8HkiNeBZKmXgWSu14FkrteBZGlYgiPIgAA
+        AAAAAAAAXweSI14FkqZeBZK7XgWSu14FkaViCI8iAAAAAAAAAABfBZKqXgWS/14Fkv8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAF4Fkv9eBZL/XwWSqgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAF8FkqpeBZL/XgWS/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXgWS/14Fkv9fBZKqAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXwWSql4F
+        kv9eBZL/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQACABF4GkYdeBZL/XgWS/14EkeNfBZKqXwWSql8F
+        kqpfBZKqXwWSql8FkqpfBZKqXwWSql8FkqpfBZKqXwWSql8FkqpfBZKqXwWSql8FkqpfBZKqXwWSql8F
+        kqpeBJHjXgWS/14Fkv9eBpKFVQCqAwAAAAAAAAAAAAAAAAAAAABgBJFIXgWS/14Fkv9eBZL/XgWS/14F
+        kv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14F
+        kv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9fBJJGAAAAAAAAAAAAAAAAAAAAAF0GklJeBZL/XgWS/14F
+        kv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14F
+        kv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/10GklIAAAAAAAAAAAAAAAAAAAAAXgmOG14F
+        kvheBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14F
+        kv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL4YgqTGgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAXQWTmV4Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14F
+        kv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14FkpgAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABdCJMhXgWS+l4Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14F
+        kv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL5YAiPIAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABeBJJ1XgWS9F4Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14F
+        kv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS9F4E
+        knUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQACABF4E
+        kUFeBJJEXgSSRF4EkkReBJJEXgSSRF4EkkReBJJEXgSSRF4EkkReBJJEXgSSRF4EkkReBJJEXgSSRF4E
+        kkReBJJEXgSSRF4EkkReBJFBQACABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABfBpOEXgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14F
+        kv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBpGCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAF0GkoNeBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/14F
+        kv9eBZL/XgWS/14Fkv9eBZL/XgWS/14Fkv9eBZL/XgWS/18GkoEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAQACABF0Ek0ddBpNVXQaTVV0Gk1VdBpNVXQaTVV0Gk1VdBpNVXQaTVV0G
+        k1VdBpNVXQaTVV0Gk1VdBpNVXQaTVV0Gk1VdBpNVXQaTVV0Gk1VfBJJGQACABAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP/////////////////////4AAAf8AAAD/AAAA/x/4GP8f+Bj/HD
+        gY/xgYGP8YGBj/GBgY/xgYGP8cPDj/H//4/x//+P4AAAB+AAAAfgAAAH4AAAB+AAAAfwAAAP+AAAH///
+        //////////////gAAB/4AAAf////////////////
 </value>
   </data>
 </root>
