--- a/Inventory_System/Properties/Resources.resx
+++ b/Inventory_System/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="logo_120px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo_120px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="sputclick_final-01-removebg-preview-21" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sputclick_final-01-removebg-preview-21.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="sputclick_final-01-removebg-preview-2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sputclick_final-01-removebg-preview-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -136,11 +139,17 @@
   <data name="edit_20px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\edit_20px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="focused-african-american-cashier-scanning-goods-checkout" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\focused-african-american-cashier-scanning-goods-checkout.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="add_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\add_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Logo2_120px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logo2_120px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="smiling-young-customer-holding-bottle-oil" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\smiling-young-customer-holding-bottle-oil.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="sputclick_final-01-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sputclick_final-01-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -148,28 +157,28 @@
   <data name="purchase_order_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\purchase_order_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="60f06e214425cbc5b3c5ae04_Spend-Management-Grain-p-2000-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\60f06e214425cbc5b3c5ae04_Spend-Management-Grain-p-2000-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="open_box_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\open_box_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="diversity_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\diversity_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="user_groups_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user_groups_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="box_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\box_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="R.8e6324986a544d9a28adc3065369e266-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\R.8e6324986a544d9a28adc3065369e266-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="diversity_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\diversity_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="box_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\box_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="open_box_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\open_box_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="60f06e214425cbc5b3c5ae04_Spend-Management-Grain-p-2000-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\60f06e214425cbc5b3c5ae04_Spend-Management-Grain-p-2000-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Screenshot 2022-08-21 at 12.40.40 PM" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Screenshot 2022-08-21 at 12.40.40 PM.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="sputclick_final-01-removebg-preview-21" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\sputclick_final-01-removebg-preview-21.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cancel_24px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cancel_24px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
